fixed download button styling on mobile

--- a/Frontend/src/app/modules/gcode/components/download-button/download-button.component.scss
+++ b/Frontend/src/app/modules/gcode/components/download-button/download-button.component.scss
@@ -13,15 +13,14 @@
   z-index: 1000;
   animation: bot-to-top 2s ease-out;
   display: flex;
-    align-items: center;
-    justify-content: center;
-
+  align-items: center;
+  justify-content: center;
 }
 
 a {
   all: unset;
 
-    cursor: pointer;
+  cursor: pointer;
 }
 
 /*
@@ -53,14 +52,14 @@ ul li a {
   border-radius: 50px;
   text-align: center;
   box-shadow: 2px 2px 3px #999;
-    font-size: 25px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+  font-size: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Hidden Buttons */
-a.float+ul {
+a.float + ul {
   visibility: hidden;
   transition: 0.5s;
   transform: scale(0);
@@ -68,16 +67,16 @@ a.float+ul {
 }
 
 /* Visible Buttons */
-a.float:hover+ul {
+a.float:hover + ul {
   visibility: visible;
-    transform: scale(1);
-      opacity: 1;
+  transform: scale(1);
+  opacity: 1;
 }
 
 ul:hover {
   visibility: visible !important;
-    transform: scale(1) !important;
-      opacity: 1 !important;
+  transform: scale(1) !important;
+  opacity: 1 !important;
 }
 
 /* Center icons */
@@ -87,11 +86,11 @@ a .icon {
 
 @keyframes bot-to-top {
   0% {
-    bottom: -60px
+    bottom: -60px;
   }
 
   50% {
-    bottom: 40px
+    bottom: 40px;
   }
 }
 
@@ -109,14 +108,13 @@ a .icon {
 
 @keyframes scale-out {
   from {
-      transform: scale(1);
-        opacity: 1;
+    transform: scale(1);
+    opacity: 1;
   }
 
   to {
     transform: scale(0);
-      opacity: 0;
-
+    opacity: 0;
   }
 }
 
@@ -137,5 +135,29 @@ a .icon {
 
   to {
     transform: rotate(0deg);
+  }
+}
+
+///////////////Responsiveness/////////////////////
+@media screen and (max-width: 700px) {
+  .float {
+    width: 40px;
+    height: 40px;
+    .icon {
+      font-size: 20px;
+    }
+  }
+
+  ul {
+    right: 56px;
+    padding-bottom: 5px;
+    bottom: 318px;
+    height: 210px;
+  }
+
+  ul li a {
+    width: 40px;
+    height: 40px;
+    font-size: 15px;
   }
 }
